--- a/main.html
+++ b/main.html
@@ -10,14 +10,15 @@
 <body>
     <!-- add table here -->
      <table class="form">
-		 <tr style="background-color:blueviolet">
+		 <thead style="background-color:blueviolet">
+			 
 			 <th>NAME</th>
 			 <th>KILLS</th>
 			 <th>SAVED</th>
 			 <th>DEATHS</th>
 			 <th>REVIVES</th>
 			 <th>WIN</th>
-		 </tr>
+		 </thead>
 		 <tr style="background-color:white">
 			 <td>Hackerman</td>
 			 <td>10</td>
